--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,6 @@
         "storage"
     ],
     "content_security_policy": {
-        "extension_pages": "default-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src wss://crypto.dog/websocket;"
+        "extension_pages": "default-src 'self'; script-src 'self' 'wasm-unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src wss://crypto.dog/websocket;"
     }
 }
